--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "start": "yarn build && NODE_ENV=development node dist/server.js",
     "production": "NODE_ENV=production node dist/server.js",
-    "test": "jest"
+    "test": "yarn build && jest"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
@@ -26,13 +26,13 @@
     "node-color-log": "^9.0.0",
     "node-fetch": "2.0.0",
     "query-string": "^7.1.1",
-    "semver": "^7.3.7",
-    "stream-to-string": "^1.2.0"
+    "semver": "^7.3.7"
   },
   "devDependencies": {
     "@types/async-retry": "^1.4.5",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
+    "@types/jest": "^28.1.8",
     "@types/ms": "^0.7.31",
     "@types/node-fetch": "^2.6.2",
     "@types/semver": "^7.3.12",
