--- a/package.json
+++ b/package.json
@@ -3,28 +3,33 @@
   "version": "0.1.0",
   "description": "Lightweight releases server for Electron designed to work with `electron-builder` and Electron's built-in `autoUpdater`",
   "main": "src/server.js",
-  "author": "Nick Beaulieu",
-  "repository": "nickbeaulieu/chestnut",
+  "authors": [
+    "Nick Beaulieu",
+    "Tristan Dyer",
+    "Stashpad"
+  ],
+  "repository": "stashpad/chestnut",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc",
-    "start": "yarn build && NODE_ENV=development node dist/server.js",
+    "build": "rimraf ./dist && tsc",
+    "start": "yarn && nodemon",
     "production": "NODE_ENV=production node dist/server.js",
-    "test": "yarn build && jest"
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
-    "eslint": "^8.21.0",
     "express": "^4.18.1",
     "express-useragent": "^1.0.15",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "ms": "^2.1.3",
     "node-color-log": "^9.0.0",
-    "node-fetch": "2.0.0",
+    "node-fetch": "^2",
     "query-string": "^7.1.1",
     "semver": "^7.3.7"
   },
@@ -32,19 +37,35 @@
     "@types/async-retry": "^1.4.5",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
-    "@types/jest": "^28.1.8",
     "@types/ms": "^0.7.31",
+    "@types/node": "^18.7.18",
     "@types/node-fetch": "^2.6.2",
     "@types/semver": "^7.3.12",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@vitest/coverage-c8": "^0.23.4",
+    "@vitest/ui": "^0.23.4",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "msw": "^0.47.3",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "supertest": "^6.2.4",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "*",
+    "vitest": "^0.23.4"
   },
   "prettier": {
     "semi": false,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "none"
   }
 }
