--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "production": "NODE_ENV=production node dist/server.js",
     "test": "vitest run",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "lint": "eslint . --cache",
+    "type-check": "tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
