--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start": "yarn && nodemon",
-    "production": "NODE_ENV=production node dist/server.js",
+    "production": "NODE_ENV=production node dist/index.js",
     "test": "vitest run",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
